--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,31 @@ body, html {
     font: 400 15px/1.8 "Lato", sans-serif;
     color: #777;
   }
+
+.bio {
+    background-image: url(../img/wall4.png);
+    color: #777;
+    /* background-color:white; */
+    text-align:center;
+    padding:60px 180px;
+    text-align: justify;
+}
+
+.infoBar{
+    background-image: url(../img/concrete_wall.png);
+    color:#ddd;
+    background-color:#282E34;
+    text-align:center;
+    padding:50px 80px;
+    text-align: justify;
+}
+
+.footer{
+  background-image: url(../img/concrete_wall.png);
+  color:#ddd;
+  background-color:#282E34;
+  padding:25px 40px;
+}
   
   .bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4  {
     position: relative;
@@ -143,7 +168,7 @@ svg{
 ::-webkit-scrollbar-thumb
 {
     border-radius: 10px;
-    background-color: rgb(76,175,80);
+    background-color: #282E34;
     background-image: -webkit-linear-gradient(90deg,
                                               transparent,
                                               rgba(0, 0, 0, 0.4) 50%,
