--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body, html {
     color: #777;
     /* background-color:white; */
     text-align:center;
-    padding:60px 180px;
+    padding:5% 8%;
     text-align: justify;
 }
 
@@ -25,7 +25,7 @@ body, html {
     color:#ddd;
     background-color:#282E34;
     text-align:center;
-    padding:50px 80px;
+    padding:5% 7%;
     text-align: justify;
 }
 
@@ -121,6 +121,29 @@ svg{
     }
   }
 
+  @media only screen and (max-device-width: 319px) {
+    .projects {
+      background-color: rgba(255, 255, 255, 0.65); 
+      border-radius: 10px; 
+      padding: 2%; 
+      max-width: 100%; 
+      border: 1px rgba(29, 29, 29, 0.185) solid
+    }
+  }
+
+  @media only screen and (max-device-width: 325px) {
+    #profile{
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+    
+    
+    }
+  }
+
+
+
   .card {
     min-height: 260px;
   }
@@ -132,6 +155,9 @@ svg{
  #profile {
     border-radius: 20px !important;
     opacity: 75%;
+    max-height: 200px;
+    float:left; 
+    margin-right: 3%;
   }
 
   .shadow{
@@ -146,6 +172,14 @@ svg{
       width: 200px;
     
     
+  }
+
+  .projects {
+    background-color: rgba(255, 255, 255, 0.65); 
+    border-radius: 10px; 
+    padding: 3%; 
+    max-width: 60%; 
+    border: 1px rgba(29, 29, 29, 0.185) solid
   }
 
   /*
